# TPU-deployment-optimizer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cli  README.md  pyproject.toml  streamlit_app.py
backend/analysis/: __init__.py  charts.py  deep_profile.py  io.py  metrics.py  models.py  report.py  scoring.py  utils.py  xla_deep.py
backend/benchmarks/: __init__.py  base.py  jax_bench.py  registry.py  tf_bench.py  torch_bench.py
docs/: Architecture.md  Deployment_CloudRun.md  TPU_Optimization_CheatSheet.md  TPU_VM_Run.md
examples/: commands.md
frontend/: __init__.py  app.py
sample_data/: metrics.csv  trace.json
sample_outputs/: recommendations.md  report.md  summary.json
sample_outputs/run_sample/: charts.html  metrics.csv  recommendations.md  report.html  summary.json
sample_outputs/run_sample/profile/: hlo.txt  trace.json
scripts/: deploy_cloudrun.ps1  deploy_cloudrun.sh  local_test.ps1  local_test.sh
src/tpuopt/: __init__.py  analyzer.py  charts.py  cli.py  io.py  models.py  recommendations.py  report.py  sample_data.py  utils.py
tests/: test_deep_profile.py  test_recommendations.py  test_scoring.py
